--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import 'tailwindcss';
+@plugin "daisyui";
+@plugin “@tailwindcss/forms”;
+@plugin "@tailwindcss/typography";
